# muninn

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  README.txt  autogen.py  configure.ac
m4/: muninn_header_eigen.m4
muninn/: Binner.h  CGE.cpp  CGE.h  CGEcollection.h  CMakeLists.txt  Estimate.h  Estimator.h  ExtrapolatedWeightScheme.h  GE.cpp  GE.h  Histogram.h  HistogramCollection.cpp  HistogramCollection.h  History.h  Makefile.am  UpdateScheme.h  WeightScheme.h  common.h
muninn/Binners/: NonUniformBinner.h  NonUniformDynamicBinner.h  UniformBinner.h
muninn/DiffusionOptimized/: DiffusionEstimate.h  DiffusionEstimator.cpp  DiffusionEstimator.h  DiffusionHistogram.h  DiffusionOptimizedWeights.h  LinearPolatedDiffusionOptimizedWeights.h
muninn/Exceptions/: MaximalNumberOfBinsExceed.h  MessageException.h  MuninnException.h
muninn/Factories/: CGEfactory.cpp  CGEfactory.h  CGEfactorySettingsException.h
muninn/Histories/: MultiHistogramHistory.cpp  MultiHistogramHistory.h
muninn/MLE/: MLE.cpp  MLE.h  MLEestimate.h
muninn/MLE/utils/: GMHequations.h  GMHequationsAccumulated.h
muninn/UpdateSchemes/: IncreaseFactorScheme.h
muninn/WeightSchemes/: FixedWeights.h  InvK.h  InvKP.h  LinearPolatedInvK.h  LinearPolatedInvKP.h  LinearPolatedMulticanonical.h  LinearPolatedWeights.cpp  LinearPolatedWeights.h  Multicanonical.h
muninn/tools/: CanonicalAverager.cpp  CanonicalAverager.h  CanonicalAveragerFromStatisticsLog.h  CanonicalProperties.h  CanonicalPropertiesFromStatisticsLog.h
muninn/utils/: ArrayAligner.h  BaseConverter.h  GenericEnumStreamOperators.h  Loggable.h  MessageLogger.cpp  MessageLogger.h  StatisticsLogReader.cpp  StatisticsLogReader.h  StatisticsLogger.cpp  StatisticsLogger.h  TArray.h  TArrayBaseIterator.h  TArrayFlatIterator.h  TArrayFlatIteratorCoord.h  TArrayMath.h  TArrayMismatchShapeException.h  TArrayMismatchSizeException.h  TArrayReadErrorException.h  TArrayReverseFlatIterator.h  TArrayUtils.cpp  TArrayUtils.h  TArrayWhereTrueIterator.h  timer.cpp  timer.h  utils.cpp  utils.h
muninn/utils/nonlinear/: NonlinearEquation.h  newton.cpp  newton.h
muninn/utils/nonlinear/newton/: ErrorFunction.h  LineSearchAlgorithm.h  NewtonRootFinder.h
muninn/utils/polation/: AverageSlope.h  AverageSlope1dUniform.h  Identity.h  LinearPolator.h  LinearPolator1dUniform.h  SupportBoundaries.h
scripts/: plot.py  plot_canonical.py  plot_dlnZ_vs_steps.py
scripts/details/: CanonicalAverager.py  CanonicalProperties.py  __init__.py  myhist.py  parse_statics_log.py  parse_tarrays.py  plot_histogram.py  utils.py
scripts/muninn/: CanonicalBase.py  CanonicalProperties.py  __init__.py  parse_statics_log.py  parse_tarrays.py
