add_library(muninn 
  GE.cpp
  CGE.cpp
  Factories/CGEfactory.cpp
  Histories/MultiHistogramHistory.cpp
  MLE/MLE.cpp
  tools/CanonicalAverager.cpp
  utils/timer.cpp
  utils/MessageLogger.cpp
  utils/TArrayUtils.cpp
  utils/StatisticsLogger.cpp
  utils/StatisticsLogReader.cpp
  utils/utils.cpp
  utils/nonlinear/newton.cpp
  WeightSchemes/LinearPolatedWeights.cpp
)
